--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,10 @@
 /* Your styles here */
+header {
+    background-color: black;
+    text-align: center;
+    padding: 2em;
+}
+
+#logo {
+    width: 30vw;
+}
