--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,60 @@
 /* Your styles here */
+body {
+    color: #393d41;
+    font-size: 1.2rem;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.65;
+}
+
 header {
     background-color: black;
     text-align: center;
     padding: 2em;
 }
 
+h1 {
+    color: #25a2c3;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    line-height: 1.5;
+}
+
+h1 {
+    font-size: 2em;
+    margin: 0.5em;
+}
+
+button {
+    background-color: #f04c2f;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
+/*-- HEADER ---------------------------------------------------------*/
 #logo {
     width: 30vw;
+}
+
+/*-- MAIN -----------------------------------------------------------*/
+
+/*---- Section Course -----------------------------------------------*/
+#course {
+    background-image: url('../images/banner.jpg');
+    background-size: cover;
+
+    text-align: center;
+    padding: 2em 2em 1.5em;
+}
+
+#course p {
+    font-size: 1.1em;
+    margin: 0.5em;
+}
+
+#course button {
+    font-size: 1em;
+    border: none;
+    border-radius: 5px;
+    padding: 0.8em 2em;
+    margin: 1.5em;
 }
