--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,10 @@ body {
     font-size: 1.2rem;
     font-family: 'Open Sans', sans-serif;
     line-height: 1.65;
-}
-
-header {
-    background-color: black;
     text-align: center;
-    padding: 2em;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
     color: #25a2c3;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
@@ -31,6 +26,11 @@ button {
 }
 
 /*-- HEADER ---------------------------------------------------------*/
+header {
+    background-color: black;
+    padding: 2em;
+}
+
 #logo {
     width: 30vw;
 }
@@ -38,11 +38,10 @@ button {
 /*-- MAIN -----------------------------------------------------------*/
 
 /*---- Section Course -----------------------------------------------*/
-#course {
+#sect-course {
     background-image: url('../images/banner.jpg');
     background-size: cover;
 
-    text-align: center;
     padding: 2em 2em 1.5em;
 }
 
@@ -57,4 +56,23 @@ button {
     border-radius: 5px;
     padding: 0.8em 2em;
     margin: 1.5em;
+}
+
+/*---- Section Future -----------------------------------------------*/
+#sect-future {
+    padding: 2em 3em 1.5em;
+
+}
+
+#sect-future article {
+    margin-bottom: 2em;
+}
+
+#sect-future article h3 {
+    margin: 0.5em;
+}
+
+#sect-future article img {
+    width: 80%;
+    border-radius: 50%;
 }
